--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,28 @@
 language: node_js
 node_js:
   - 8.11.4
+before_install:
+  - npm install -g npm@6.4.1
+  - npm -v
 install:
-  - npm install -g firebase-tools
+  - npm cache clean --force
+  - rm -rf node_modules
+  - npm install --save
+
+script:
+  - CI=false
+  - npm run-script build
+
+after_failure:
+  - cat /home/travis/.npm/_logs/*-debug.log
+
 after_success:
-  - npm i -g firebase-ci
-  - firebase-ci deploy
+  - npm install -g firebase-tools
+
 branches:
   only:
     - master
-script:
-  - echo "Deploy"
+
 deploy:
   provider: firebase
   skip_cleanup: true
