--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "firebase": "^5.4.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
