--- a/.travis.yml
+++ b/.travis.yml
@@ -9,19 +9,19 @@ install:
   - rm -rf node_modules
   - npm install --save
 
+before_script:
+  - chmod +x build.sh
 script:
   - CI=false
-  - npm run-script build
+  - ./build.sh
 
 after_failure:
   - cat /home/travis/.npm/_logs/*-debug.log
 
-after_success:
-  - npm install -g firebase-tools
-
 branches:
   only:
     - master
+    - develop
 
 notifications:
   slack:
@@ -31,9 +31,14 @@ notifications:
     on_success: change
     on_failure: always
 
+before_deploy:
+  - npm install -g firebase-tools
+  - chmod +x firebase_deploy.sh
+
 deploy:
-  provider: firebase
+  provider: script
+  script: ./firebase_deploy.sh
   skip_cleanup: true
-  token:
-    secure: $FIREBASE_TOKEN
-  project: $FIREBASE_PROJECT
+  on:
+    all_branches: true
+    condition: $TRAVIS_BRANCH =~ ^master|develop$
