Add cross-env package to package.json

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
     "build:production": "REACT_APP_ENV=production react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "cross-env": "^5.2.0"
   }
 }
