--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "sharp": "^0.21.0"
   },
   "scripts": {
-    "start": "REACT_APP_ENV=development react-scripts start",
-    "build:development": "REACT_APP_ENV=development react-scripts build",
-    "build:production": "REACT_APP_ENV=production react-scripts build",
+    "start": "cross-env REACT_APP_ENV=development react-scripts start",
+    "build:development": "cross-env REACT_APP_ENV=development react-scripts build",
+    "build:production": "cross-env REACT_APP_ENV=production react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "cross-env": "^5.2.0"
   }
 }
