--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ install:
   - npm cache clean --force
   - rm -rf node_modules
   - npm install --save
+  - cd functions/
+  - npm install --save
+  - cd ../
 
 before_script:
   - chmod +x build.sh
