--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0",
-    "sharp": "^0.21.0"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "cross-env REACT_APP_ENV=development react-scripts start",
