--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
+    "canvas-prebuilt": "^2.0.0-alpha.14",
     "cross-env": "^5.2.0",
     "react-test-renderer": "^16.6.1"
   },
