--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "canvas-prebuilt": "^2.0.0-alpha.14",
+    "canvas-prebuilt": "^1.0.0",
     "cross-env": "^5.2.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
     "react-test-renderer": "^16.6.1"
   },
   "browserslist": [
