--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ install:
 
 before_script:
   - npm install -g firebase-tools
-  - firebase use test --token $FIREBASE_TOKEN
+  - firebase use development --token $FIREBASE_TOKEN
   - firebase deploy --only firestore --token $FIREBASE_TOKEN
   - chmod +x build.sh
 script:
