--- a/functions/package.json
+++ b/functions/package.json
@@ -3,9 +3,10 @@
   "description": "Generate Thumbnail with Sharp Firebase Functions sample",
   "dependencies": {
     "@google-cloud/storage": "^0.4.0",
-    "sharp": "^0.18.1",
     "firebase-admin": "~6.1.0",
-    "firebase-functions": "^2.1.0"
+    "firebase-functions": "^2.1.0",
+    "nodemailer": "^4.7.0",
+    "sharp": "^0.18.1"
   },
   "devDependencies": {
     "eslint": "^4.13.1",
