--- a/functions/package.json
+++ b/functions/package.json
@@ -5,6 +5,7 @@
     "@google-cloud/storage": "^0.4.0",
     "firebase-admin": "~6.1.0",
     "firebase-functions": "^2.1.0",
+    "node-fetch": "^2.3.0",
     "nodemailer": "^4.7.0",
     "sharp": "^0.18.1"
   },
