--- a/functions/package.json
+++ b/functions/package.json
@@ -6,7 +6,7 @@
     "firebase-admin": "~6.1.0",
     "firebase-functions": "^2.1.0",
     "nodemailer": "^4.7.0",
-    "sharp": "^0.18.1"
+    "simple-git": "^1.107.0"
   },
   "devDependencies": {
     "eslint": "^4.13.1",
